--- a/src/main/webapp/css/theme.css
+++ b/src/main/webapp/css/theme.css
@@ -818,6 +818,14 @@ MAIN CONTENT SECTION
     transition:all .5s ease-in-out;
 }
 
+#main-content1 {
+    margin-left:0px;
+    -webkit-transition:all .5s ease-in-out;
+    -moz-transition:all .5s ease-in-out;
+    -o-transition:all .5s ease-in-out;
+    transition:all .5s ease-in-out;
+}
+
 .merge-right-sidebar {
     margin-right: 300px;
 }
