--- a/src/main/webapp/css/theme.css
+++ b/src/main/webapp/css/theme.css
@@ -195,6 +195,10 @@ h3.degrees:after {
     padding-left: 13px;
 }
 
+.col-md-121{
+    margin-left: 20%;
+}
+
 .c_panel, .widget-content {
     margin-bottom: 20px !important;
 }
